real-bundle/networking/iptablessave
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Feb  3 05:40:23 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-egress-dscp - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A cali-POSTROUTING -m comment --comment "cali:5MjTCkW3V-SgPUbj" -m comment --comment "set dscp for traffic leaving cluster." -m set --match-set cali40dscp-src-net src -m set ! --match-set cali40all-ipam-pools dst -m set ! --match-set cali40this-host dst -j cali-egress-dscp
-A cali-POSTROUTING -m comment --comment "cali:qaBFqjrfvtSJDMkj" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:5sx1W7iTE-cu0I7v" -j MARK --set-xmark 0x0/0x1b0000
-A cali-POSTROUTING -m comment --comment "cali:kfq5uF8yRzz5QtPY" -m conntrack --ctstate DNAT -j cali-to-host-endpoint
-A cali-POSTROUTING -m comment --comment "cali:pfrZSH6wqlazNfNi" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Tue Feb  3 05:40:23 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Feb  3 05:40:23 2026
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-rpf-skip - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:clI8WObfCl4yhr60" -j MARK --set-xmark 0x0/0x1b0000
-A cali-OUTPUT -m comment --comment "cali:ZbkN6P8OdRcBRPpU" -j cali-to-host-endpoint
-A cali-OUTPUT -p udp -m comment --comment "cali:ry5_UEpt1OaPPCxO" -m udp --dport 4789 -j NOTRACK
-A cali-OUTPUT -m comment --comment "cali:MGhICIksKDnYMIkW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:DQ6LK2guiBRMyrLK" -j MARK --set-xmark 0x0/0x1b0000
-A cali-PREROUTING -p udp -m comment --comment "cali:sIsu2aAqNN6K3YYn" -m udp --dport 4789 -j NOTRACK
-A cali-PREROUTING -i cali+ -m comment --comment "cali:W0qKAga6QivxLxL1" -j MARK --set-xmark 0x80000/0x80000
-A cali-PREROUTING -m comment --comment "cali:QOYCZUivPyJL6Dp1" -m mark --mark 0x80000/0x80000 -j cali-rpf-skip
-A cali-PREROUTING -m comment --comment "cali:uvipz_NmQPrGYnTB" -m mark --mark 0x80000/0x80000 -m rpfilter --validmark --invert -j DROP
-A cali-PREROUTING -m comment --comment "cali:pj4jqF0K2OCNLmzX" -m mark --mark 0x0/0x80000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Jefg6QI5khJcHnVl" -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Tue Feb  3 05:40:23 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Feb  3 05:40:23 2026
*filter
:INPUT ACCEPT [936490:1699942426]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1024394:762026745]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-cidr-block - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-from-wl-dispatch-d - [0:0]
:cali-fw-cali04c9dffa526 - [0:0]
:cali-fw-cali495b8ee3db2 - [0:0]
:cali-fw-cali611edc3ad34 - [0:0]
:cali-fw-cali74ae4c9e9aa - [0:0]
:cali-fw-calid65a82ecbed - [0:0]
:cali-fw-calid8e2a0adf4b - [0:0]
:cali-fw-calie889fcca20f - [0:0]
:cali-pri-_7bnNHSm00P51QAo5Qe - [0:0]
:cali-pri-_Jt5JQO28LboxWwRucA - [0:0]
:cali-pri-_XnQ5h_hZf854SLqzqE - [0:0]
:cali-pri-_deDmtCOemYXSj_UG1n - [0:0]
:cali-pri-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-kns.calico-system - [0:0]
:cali-pri-kns.cattle-system - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pro-_7bnNHSm00P51QAo5Qe - [0:0]
:cali-pro-_Jt5JQO28LboxWwRucA - [0:0]
:cali-pro-_XnQ5h_hZf854SLqzqE - [0:0]
:cali-pro-_deDmtCOemYXSj_UG1n - [0:0]
:cali-pro-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-kns.calico-system - [0:0]
:cali-pro-kns.cattle-system - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-to-wl-dispatch-d - [0:0]
:cali-tw-cali04c9dffa526 - [0:0]
:cali-tw-cali495b8ee3db2 - [0:0]
:cali-tw-cali611edc3ad34 - [0:0]
:cali-tw-cali74ae4c9e9aa - [0:0]
:cali-tw-calid65a82ecbed - [0:0]
:cali-tw-calid8e2a0adf4b - [0:0]
:cali-tw-calie889fcca20f - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "cali:S93hcgKJrXEqnTfs" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A FORWARD -m comment --comment "cali:mp77cMpurHhyjLrM" -j MARK --set-xmark 0x10000/0x10000
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -m nfacct --nfacct-name  ct_state_invalid_dropped_pkts -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-FORWARD -m comment --comment "cali:W_vvds1Nw3n9QE2f" -j MARK --set-xmark 0x0/0x1a0000
-A cali-FORWARD -m comment --comment "cali:ZfgmjuiLaA8Pg0kp" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
-A cali-FORWARD -i cali+ -m comment --comment "cali:tAzwBLPaV-j53OOZ" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:4Z0Pf0byo05NFe-P" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:hQ7Oc16wmUtLuneJ" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:rnKNH2WxGcRQcIlD" -j cali-cidr-block
-A cali-INPUT -p udp -m comment --comment "cali:J76FwxInZIsk7uKY" -m comment --comment "Allow IPv4 VXLAN packets from allowed hosts" -m multiport --dports 4789 -m set --match-set cali40all-vxlan-net src -m addrtype --dst-type LOCAL -j ACCEPT
-A cali-INPUT -p udp -m comment --comment "cali:EDCNTTxYfggApx8C" -m comment --comment "Drop IPv4 VXLAN packets from non-allowed hosts" -m multiport --dports 4789 -m addrtype --dst-type LOCAL -j DROP
-A cali-INPUT -i cali+ -m comment --comment "cali:H03xYXARh4e8pwd4" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:MN6K3isIWBigb1Va" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:aKDQAoV0P_FFAIwV" -j MARK --set-xmark 0x0/0x1b0000
-A cali-INPUT -m comment --comment "cali:vIx3xkWzuvLW9fr4" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:5W9XghKma9wuz47x" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:69FkRTJDvD5Vu6Vl" -j RETURN
-A cali-OUTPUT -p udp -m comment --comment "cali:-QZG79DohFjalQBb" -m comment --comment "Allow IPv4 VXLAN packets to other allowed hosts" -m multiport --dports 4789 -m addrtype --src-type LOCAL -m set --match-set cali40all-vxlan-net dst -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:6T0hFtymUtXMOfEV" -j MARK --set-xmark 0x0/0x1b0000
-A cali-OUTPUT -m comment --comment "cali:IpTGXsDHURPUaLjJ" -m conntrack ! --ctstate DNAT -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:wgnULo2gucg1umsA" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-from-wl-dispatch -i cali04c9dffa526 -m comment --comment "cali:2LIKkr6mTc4y4ghN" -g cali-fw-cali04c9dffa526
-A cali-from-wl-dispatch -i cali495b8ee3db2 -m comment --comment "cali:0EiACbprGu3nJxnc" -g cali-fw-cali495b8ee3db2
-A cali-from-wl-dispatch -i cali611edc3ad34 -m comment --comment "cali:2BfifD-WTb3strMn" -g cali-fw-cali611edc3ad34
-A cali-from-wl-dispatch -i cali74ae4c9e9aa -m comment --comment "cali:YDhu_t_BkjPfu891" -g cali-fw-cali74ae4c9e9aa
-A cali-from-wl-dispatch -i calid+ -m comment --comment "cali:xWbetb-ePLvHSF-M" -g cali-from-wl-dispatch-d
-A cali-from-wl-dispatch -i calie889fcca20f -m comment --comment "cali:diX_F7UiCgdMBAaK" -g cali-fw-calie889fcca20f
-A cali-from-wl-dispatch -m comment --comment "cali:Q5tQSNLoMQNMvAau" -m comment --comment "Unknown interface" -j DROP
-A cali-from-wl-dispatch-d -i calid65a82ecbed -m comment --comment "cali:oUq9Ks6RU0Y6iBnj" -g cali-fw-calid65a82ecbed
-A cali-from-wl-dispatch-d -i calid8e2a0adf4b -m comment --comment "cali:o2O00ZlzCy-0kVPd" -g cali-fw-calid8e2a0adf4b
-A cali-from-wl-dispatch-d -m comment --comment "cali:nOCd6i8g878LMd1T" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali04c9dffa526 -m comment --comment "cali:mE_-vv4lT5mom7Jc" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali04c9dffa526 -m comment --comment "cali:GFHYu6u-_J9p9Pqo" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali04c9dffa526 -m comment --comment "cali:maO5tNDZEPoIGCgQ" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali04c9dffa526 -p udp -m comment --comment "cali:xqernuJLWfXpomDW" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali04c9dffa526 -p ipencap -m comment --comment "cali:EHW0w8UXVRvUVSM8" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali04c9dffa526 -m comment --comment "cali:sv8Yg1bxyBRNQZ0C" -j cali-pro-kns.cattle-system
-A cali-fw-cali04c9dffa526 -m comment --comment "cali:HJJwmjq8H3Q9CEnN" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali04c9dffa526 -m comment --comment "cali:wQ9a4UbSC-TUyuOR" -j cali-pro-_XnQ5h_hZf854SLqzqE
-A cali-fw-cali04c9dffa526 -m comment --comment "cali:ixouTqzr_GEa6A3h" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali04c9dffa526 -m comment --comment "cali:aZvIH6OGc9jENxdX" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali495b8ee3db2 -m comment --comment "cali:6_Rppe0nEvE4PYjl" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali495b8ee3db2 -m comment --comment "cali:mvESrj53-a3psRZp" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali495b8ee3db2 -m comment --comment "cali:8iz8kfpa1SSTJk37" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali495b8ee3db2 -p udp -m comment --comment "cali:qkDqcA9nYmXEdjiO" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali495b8ee3db2 -p ipencap -m comment --comment "cali:sK0meIX8npYVdB1v" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali495b8ee3db2 -m comment --comment "cali:CkQipGi8MB2HxXpV" -j cali-pro-kns.kube-system
-A cali-fw-cali495b8ee3db2 -m comment --comment "cali:ksZr-z0nzZcJkuU_" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali495b8ee3db2 -m comment --comment "cali:8MYcHY1S7I8W-8Oh" -j cali-pro-_7bnNHSm00P51QAo5Qe
-A cali-fw-cali495b8ee3db2 -m comment --comment "cali:nQnb2Sx1serGc1M4" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali495b8ee3db2 -m comment --comment "cali:h0ahXU4QKtYovon0" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali611edc3ad34 -m comment --comment "cali:_3WdPEgtM-nWvFhN" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali611edc3ad34 -m comment --comment "cali:FPpu6s8KeYAIWFqc" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali611edc3ad34 -m comment --comment "cali:ZMmUlGFAcU5VBMEs" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali611edc3ad34 -p udp -m comment --comment "cali:wqRR6V1j0cdx2dAL" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali611edc3ad34 -p ipencap -m comment --comment "cali:52XD8571qY9gBEMt" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali611edc3ad34 -m comment --comment "cali:AMJj2BBiTSvO_kl1" -j cali-pro-kns.cattle-system
-A cali-fw-cali611edc3ad34 -m comment --comment "cali:llOoZe-AmEecpoQM" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali611edc3ad34 -m comment --comment "cali:oyOG6eRaZpRe4Ii2" -j cali-pro-_deDmtCOemYXSj_UG1n
-A cali-fw-cali611edc3ad34 -m comment --comment "cali:K7dCoZsnPift83rz" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali611edc3ad34 -m comment --comment "cali:BIG9agd4MOYFX1_Y" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali74ae4c9e9aa -m comment --comment "cali:VTA8bRgExZZ7oiLh" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali74ae4c9e9aa -m comment --comment "cali:WxQejSnP5_lsV1pl" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali74ae4c9e9aa -m comment --comment "cali:Ayde_V_aRx5Zwmcq" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali74ae4c9e9aa -p udp -m comment --comment "cali:74whMmzqkYA2YgJw" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali74ae4c9e9aa -p ipencap -m comment --comment "cali:qCoLjcFUpfQFsgzr" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali74ae4c9e9aa -m comment --comment "cali:3KY6G7oW0MV63Jwd" -j cali-pro-kns.kube-system
-A cali-fw-cali74ae4c9e9aa -m comment --comment "cali:-38zI9jtEss5M-WC" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali74ae4c9e9aa -m comment --comment "cali:M5mmC3pQkRI4xkZP" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-cali74ae4c9e9aa -m comment --comment "cali:dTDgWgU7knTUC4cU" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali74ae4c9e9aa -m comment --comment "cali:Whmeyhq_KREHZrzy" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calid65a82ecbed -m comment --comment "cali:CKN4H1gbzy04qHNF" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calid65a82ecbed -m comment --comment "cali:9jizRLWCKh9BoqAE" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calid65a82ecbed -m comment --comment "cali:dvq7f7PZ-lBYk1pi" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-calid65a82ecbed -p udp -m comment --comment "cali:2H_Gbk0quss2fl30" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calid65a82ecbed -p ipencap -m comment --comment "cali:y0UuHYGBMB4qSxZH" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calid65a82ecbed -m comment --comment "cali:a4g6F4K6IDDpvlAd" -j cali-pro-kns.cattle-system
-A cali-fw-calid65a82ecbed -m comment --comment "cali:w9LThbaAdiZijtyw" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calid65a82ecbed -m comment --comment "cali:mTSR7ZoPvGcv5mrv" -j cali-pro-_XnQ5h_hZf854SLqzqE
-A cali-fw-calid65a82ecbed -m comment --comment "cali:MiyzIdE12ts5AXhF" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calid65a82ecbed -m comment --comment "cali:TKXMEl1T-6DezW_L" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calid8e2a0adf4b -m comment --comment "cali:gUw0ecEBshSVAeWQ" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calid8e2a0adf4b -m comment --comment "cali:bJ4MJZ7q-6ipugS6" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calid8e2a0adf4b -m comment --comment "cali:B2CQSrqiBF7ShaUQ" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-calid8e2a0adf4b -p udp -m comment --comment "cali:UR0izVNU7UURkQkF" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calid8e2a0adf4b -p ipencap -m comment --comment "cali:MmntLJ5DXLtzVrgE" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calid8e2a0adf4b -m comment --comment "cali:o8nEbwvg0vaog1sM" -j cali-pro-kns.calico-system
-A cali-fw-calid8e2a0adf4b -m comment --comment "cali:QuFj1EAJMDC1VLtV" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calid8e2a0adf4b -m comment --comment "cali:ZnvApwwi8CTguVb1" -j cali-pro-_nzzjLvInId1gPHmQz_
-A cali-fw-calid8e2a0adf4b -m comment --comment "cali:x0AfogfRVDWtRyDu" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calid8e2a0adf4b -m comment --comment "cali:t-bBviQe7nGwVzyE" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calie889fcca20f -m comment --comment "cali:9fIVqw1HoZxzk3Is" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calie889fcca20f -m comment --comment "cali:jWeLxIcJpMsTVIov" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calie889fcca20f -m comment --comment "cali:D1J_YmBOLIDySpGc" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-calie889fcca20f -p udp -m comment --comment "cali:CtELhvyi4KEg7QEX" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calie889fcca20f -p ipencap -m comment --comment "cali:1M6urj4SIEX4Fmx-" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calie889fcca20f -m comment --comment "cali:5C73xQg5U6qApIxl" -j cali-pro-kns.cattle-system
-A cali-fw-calie889fcca20f -m comment --comment "cali:4GhzDbrRa1WNXfMs" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie889fcca20f -m comment --comment "cali:rOH2tYLt8BJaG9oA" -j cali-pro-_Jt5JQO28LboxWwRucA
-A cali-fw-calie889fcca20f -m comment --comment "cali:a4cnOnK676NPsCa8" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie889fcca20f -m comment --comment "cali:BuOKnLL1eiGq1G93" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pri-_7bnNHSm00P51QAo5Qe -m comment --comment "cali:ksjFpC8Po46siiFK" -m comment --comment "Profile ksa.kube-system.rke2-coredns-rke2-coredns-autoscaler ingress"
-A cali-pri-_Jt5JQO28LboxWwRucA -m comment --comment "cali:d26n6naDlXyVb-kP" -m comment --comment "Profile ksa.cattle-system.rancher-webhook ingress"
-A cali-pri-_XnQ5h_hZf854SLqzqE -m comment --comment "cali:givjwnuhCqJ4e5_N" -m comment --comment "Profile ksa.cattle-system.cattle ingress"
-A cali-pri-_deDmtCOemYXSj_UG1n -m comment --comment "cali:tHZuspAwWjgTad48" -m comment --comment "Profile ksa.cattle-system.system-upgrade-controller ingress"
-A cali-pri-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:UQoEf2WCdU0bPTCb" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers ingress"
-A cali-pri-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:WqgznqAQ-uYV0oBx" -m comment --comment "Profile ksa.kube-system.coredns ingress"
-A cali-pri-kns.calico-system -m comment --comment "cali:hLANj-OVIyT53h_j" -m comment --comment "Profile kns.calico-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.cattle-system -m comment --comment "cali:4cxptRUh_i7dOJYS" -m comment --comment "Profile kns.cattle-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:J1TyxtHWd0qaBGK-" -m comment --comment "Profile kns.kube-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-_7bnNHSm00P51QAo5Qe -m comment --comment "cali:Cn_XvK0BiITKuv_k" -m comment --comment "Profile ksa.kube-system.rke2-coredns-rke2-coredns-autoscaler egress"
-A cali-pro-_Jt5JQO28LboxWwRucA -m comment --comment "cali:KaVOh_Za60EoX9xk" -m comment --comment "Profile ksa.cattle-system.rancher-webhook egress"
-A cali-pro-_XnQ5h_hZf854SLqzqE -m comment --comment "cali:SdFoKv0bBkcv1V09" -m comment --comment "Profile ksa.cattle-system.cattle egress"
-A cali-pro-_deDmtCOemYXSj_UG1n -m comment --comment "cali:_xGikoWQgMM-8NmD" -m comment --comment "Profile ksa.cattle-system.system-upgrade-controller egress"
-A cali-pro-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:5bHxBXLMkJKgC6dk" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers egress"
-A cali-pro-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:0-_UPh39dt5XfhmJ" -m comment --comment "Profile ksa.kube-system.coredns egress"
-A cali-pro-kns.calico-system -m comment --comment "cali:gWxJzCZXxl31NR0P" -m comment --comment "Profile kns.calico-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.cattle-system -m comment --comment "cali:KTqm7vO7t18yVt6i" -m comment --comment "Profile kns.cattle-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:tgOR2S8DVHZW3F1M" -m comment --comment "Profile kns.kube-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-to-wl-dispatch -o cali04c9dffa526 -m comment --comment "cali:ScI1C9xnoQE2E5_h" -g cali-tw-cali04c9dffa526
-A cali-to-wl-dispatch -o cali495b8ee3db2 -m comment --comment "cali:epoEx7Bsalc4JUoA" -g cali-tw-cali495b8ee3db2
-A cali-to-wl-dispatch -o cali611edc3ad34 -m comment --comment "cali:fcK91AnTsawq70wN" -g cali-tw-cali611edc3ad34
-A cali-to-wl-dispatch -o cali74ae4c9e9aa -m comment --comment "cali:6g49IfpytpsvrVb_" -g cali-tw-cali74ae4c9e9aa
-A cali-to-wl-dispatch -o calid+ -m comment --comment "cali:10hl2YfZOBOv467B" -g cali-to-wl-dispatch-d
-A cali-to-wl-dispatch -o calie889fcca20f -m comment --comment "cali:tOX03jLJRvmaPVou" -g cali-tw-calie889fcca20f
-A cali-to-wl-dispatch -m comment --comment "cali:PG4B-5vOOAc0AYP8" -m comment --comment "Unknown interface" -j DROP
-A cali-to-wl-dispatch-d -o calid65a82ecbed -m comment --comment "cali:Lmd8xZ5fImkkMgQy" -g cali-tw-calid65a82ecbed
-A cali-to-wl-dispatch-d -o calid8e2a0adf4b -m comment --comment "cali:eZvSreu8veDcb_wl" -g cali-tw-calid8e2a0adf4b
-A cali-to-wl-dispatch-d -m comment --comment "cali:cXmVdHzFBgH1nRj9" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali04c9dffa526 -m comment --comment "cali:535PyVvx3mV-LmBK" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali04c9dffa526 -m comment --comment "cali:iEvpCY5fpJl3kg2z" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali04c9dffa526 -m comment --comment "cali:UAhZQ4bfdhKJd3yC" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali04c9dffa526 -m comment --comment "cali:t_Z9xT5LQXysFmWv" -j cali-pri-kns.cattle-system
-A cali-tw-cali04c9dffa526 -m comment --comment "cali:0OOwB_PUQuEg7yY2" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali04c9dffa526 -m comment --comment "cali:e21Pnlpy1i_9knyW" -j cali-pri-_XnQ5h_hZf854SLqzqE
-A cali-tw-cali04c9dffa526 -m comment --comment "cali:mGbll4gMxhqyvvk8" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali04c9dffa526 -m comment --comment "cali:vBaoh-iRrBWYatH3" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali495b8ee3db2 -m comment --comment "cali:TUMMpyW0RzIH6oUi" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali495b8ee3db2 -m comment --comment "cali:syoCMMbzq8_WvmgD" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali495b8ee3db2 -m comment --comment "cali:FFWfkoLzX1J3ywKC" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali495b8ee3db2 -m comment --comment "cali:8AbqqRFgudQG2h9I" -j cali-pri-kns.kube-system
-A cali-tw-cali495b8ee3db2 -m comment --comment "cali:zUe5Xk9trxrkMFCZ" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali495b8ee3db2 -m comment --comment "cali:zArpLxE84kC8T5Ur" -j cali-pri-_7bnNHSm00P51QAo5Qe
-A cali-tw-cali495b8ee3db2 -m comment --comment "cali:SdgL3xIihriEBxyX" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali495b8ee3db2 -m comment --comment "cali:cLHx3Up11MoOVKF3" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali611edc3ad34 -m comment --comment "cali:8htRKglt_vCxONmB" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali611edc3ad34 -m comment --comment "cali:WD2HAiq_2EcfmBkG" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali611edc3ad34 -m comment --comment "cali:Vnc78pv7e3mp7R_M" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali611edc3ad34 -m comment --comment "cali:klwCI5uQwiPMLEa8" -j cali-pri-kns.cattle-system
-A cali-tw-cali611edc3ad34 -m comment --comment "cali:Wqkq_xykHCC-s0GW" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali611edc3ad34 -m comment --comment "cali:5tm2W5y6jPguPvKb" -j cali-pri-_deDmtCOemYXSj_UG1n
-A cali-tw-cali611edc3ad34 -m comment --comment "cali:ttl0B2ugzNwsD2J9" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali611edc3ad34 -m comment --comment "cali:Fmffp6DVFhFHEYEj" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali74ae4c9e9aa -m comment --comment "cali:RHf1hehrWScNTPE0" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali74ae4c9e9aa -m comment --comment "cali:Y-FdAvIUcNO1um9w" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali74ae4c9e9aa -m comment --comment "cali:f7_ACVJpAR-C-21I" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali74ae4c9e9aa -m comment --comment "cali:pERA-pUVM98reWjC" -j cali-pri-kns.kube-system
-A cali-tw-cali74ae4c9e9aa -m comment --comment "cali:g_wi-IEyV_AuIgrb" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali74ae4c9e9aa -m comment --comment "cali:5WtkWJbO8dKUPZzf" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-cali74ae4c9e9aa -m comment --comment "cali:-wBGh6Jw9FN46gZz" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali74ae4c9e9aa -m comment --comment "cali:HRSSlOEcQ4F-5w_V" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calid65a82ecbed -m comment --comment "cali:NQxIoK-fYXiVtK2a" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calid65a82ecbed -m comment --comment "cali:uUbdc3IbgP2bjZlL" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calid65a82ecbed -m comment --comment "cali:wB_E9useP4t9I03Y" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-calid65a82ecbed -m comment --comment "cali:m4g_dRJ57eR8d3VM" -j cali-pri-kns.cattle-system
-A cali-tw-calid65a82ecbed -m comment --comment "cali:WeAam34_PgKCJYje" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calid65a82ecbed -m comment --comment "cali:PkOujXiN45BbYvhk" -j cali-pri-_XnQ5h_hZf854SLqzqE
-A cali-tw-calid65a82ecbed -m comment --comment "cali:brhWNMBwrrxxXOqi" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calid65a82ecbed -m comment --comment "cali:EXKS1-ts6E-nEby5" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calid8e2a0adf4b -m comment --comment "cali:WtZNTZCtg-dBokaI" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calid8e2a0adf4b -m comment --comment "cali:SeRL_-hGhLnQYVaT" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calid8e2a0adf4b -m comment --comment "cali:c5aS-R6RBXaz9Uft" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-calid8e2a0adf4b -m comment --comment "cali:kTKSTTCeZtkNdsTE" -j cali-pri-kns.calico-system
-A cali-tw-calid8e2a0adf4b -m comment --comment "cali:2yIABqkOjsYh8VmL" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calid8e2a0adf4b -m comment --comment "cali:jlFTIXgXrClSXUCr" -j cali-pri-_nzzjLvInId1gPHmQz_
-A cali-tw-calid8e2a0adf4b -m comment --comment "cali:k2DXCU9rE4LP7MSb" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calid8e2a0adf4b -m comment --comment "cali:TkJNQW3I-9mEhuky" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calie889fcca20f -m comment --comment "cali:5hF7TepUg0yuxmCF" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calie889fcca20f -m comment --comment "cali:b8X7TjHvFUJQBN-j" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calie889fcca20f -m comment --comment "cali:d6Fz0sbPg3Nl5w_0" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-calie889fcca20f -m comment --comment "cali:Gt7Dmf2JJveAcnyN" -j cali-pri-kns.cattle-system
-A cali-tw-calie889fcca20f -m comment --comment "cali:B9W9hLkGwUyoqHu2" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie889fcca20f -m comment --comment "cali:pGsvhqX3uM7JSwZt" -j cali-pri-_Jt5JQO28LboxWwRucA
-A cali-tw-calie889fcca20f -m comment --comment "cali:RTYK6HBXLQQ457Ih" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie889fcca20f -m comment --comment "cali:LJOB269VnaBXamao" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Tue Feb  3 05:40:23 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Feb  3 05:40:23 2026
*nat
:PREROUTING ACCEPT [1162:68888]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [7414:457464]
:POSTROUTING ACCEPT [7718:484072]
:KUBE-EXT-INSOL646YPXFRCJP - [0:0]
:KUBE-EXT-KTBE7ECJOHPNNRXB - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2NPDRNRXOUX2T7IJ - [0:0]
:KUBE-SEP-3VCAJUEHTS7I3TRG - [0:0]
:KUBE-SEP-6CWBZ77AME27WXPJ - [0:0]
:KUBE-SEP-6WX5FXQ5YATY6NZM - [0:0]
:KUBE-SEP-7RTFVLLMCHN2YOMK - [0:0]
:KUBE-SEP-AVHOGN73QTR76HY3 - [0:0]
:KUBE-SEP-AWE6D3APBLFBYRPH - [0:0]
:KUBE-SEP-BSXYUTBE2GKU7RJX - [0:0]
:KUBE-SEP-D5W3E6WXUJEHU5Y6 - [0:0]
:KUBE-SEP-FTTU2TIMIL4I775A - [0:0]
:KUBE-SEP-FU6NIKUWJSD7SQRX - [0:0]
:KUBE-SEP-GGE6WDXLRBNI2T7F - [0:0]
:KUBE-SEP-GOBTSNK7N6MATL7U - [0:0]
:KUBE-SEP-IEIVYUMXLP5S6MI2 - [0:0]
:KUBE-SEP-ISCJHPJGGOASRCSP - [0:0]
:KUBE-SEP-IZ47JOPAMMWPCQBA - [0:0]
:KUBE-SEP-JH5TJSQ5NIODR4RO - [0:0]
:KUBE-SEP-KUVKK6Y2HFBI2K5Q - [0:0]
:KUBE-SEP-L6UFBLZMPEKAYZST - [0:0]
:KUBE-SEP-LBIWXZ7376QE5R4W - [0:0]
:KUBE-SEP-LHFMCC3JA3UGQX3H - [0:0]
:KUBE-SEP-ODB7APEZBEW644YR - [0:0]
:KUBE-SEP-OQR5UQEBCHXDPVQP - [0:0]
:KUBE-SEP-OVWCTFYLC7APTXJZ - [0:0]
:KUBE-SEP-PMEUI4BIJN4NHQFZ - [0:0]
:KUBE-SEP-QIBCIBXODCEF4EHQ - [0:0]
:KUBE-SEP-QRGLEMPRCGNXPMPX - [0:0]
:KUBE-SEP-T3S2S2VDOQYZMZON - [0:0]
:KUBE-SEP-T5EBTOPJY5NJPIBT - [0:0]
:KUBE-SEP-TJMXSQ5ZZBREC6B4 - [0:0]
:KUBE-SEP-TKGTPA2KVQ3BNFLH - [0:0]
:KUBE-SEP-Y3SVIH6FAKPDIF7Y - [0:0]
:KUBE-SEP-YNB5S2ZOV45SZHWS - [0:0]
:KUBE-SEP-YNX7HLDUBB3ZTWVT - [0:0]
:KUBE-SEP-YTRVHAZXBH6CV6EN - [0:0]
:KUBE-SEP-Z5KRAGMBCDB7DF24 - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-3HCIR6ANNNHMOGFQ - [0:0]
:KUBE-SVC-46CB5Z6CZH2WFWVP - [0:0]
:KUBE-SVC-BOJCKSINR77JVVPB - [0:0]
:KUBE-SVC-DISNXZXWEI7GIGLU - [0:0]
:KUBE-SVC-HP77IKALGGR6UULO - [0:0]
:KUBE-SVC-INSOL646YPXFRCJP - [0:0]
:KUBE-SVC-KTBE7ECJOHPNNRXB - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-PUNXDRXNIM3ELMDM - [0:0]
:KUBE-SVC-RK657RLKDNVNU64O - [0:0]
:KUBE-SVC-RXZQBFX6IWO22WWW - [0:0]
:KUBE-SVC-WVO5D2SCRAX7PYVR - [0:0]
:KUBE-SVC-YFPH5LFNKP7E3G4L - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -m comment --comment "cali:0i8pjzKKPyA34aQD" -j cali-POSTROUTING
-A KUBE-EXT-INSOL646YPXFRCJP -m comment --comment "masquerade traffic for r8s-test-api-services/r8s-test-api-server external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-INSOL646YPXFRCJP -j KUBE-SVC-INSOL646YPXFRCJP
-A KUBE-EXT-KTBE7ECJOHPNNRXB -m comment --comment "masquerade traffic for r8s-test-app-frontend/r8s-test-frontend external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-KTBE7ECJOHPNNRXB -j KUBE-SVC-KTBE7ECJOHPNNRXB
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "r8s-test-api-services/r8s-test-api-server" -m tcp --dport 31068 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-INSOL646YPXFRCJP
-A KUBE-NODEPORTS -p tcp -m comment --comment "r8s-test-api-services/r8s-test-api-server" -m tcp --dport 31068 -j KUBE-EXT-INSOL646YPXFRCJP
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp --dport 31223 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-KTBE7ECJOHPNNRXB
-A KUBE-NODEPORTS -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp --dport 31223 -j KUBE-EXT-KTBE7ECJOHPNNRXB
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-2NPDRNRXOUX2T7IJ -s 10.42.14.96/32 -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -j KUBE-MARK-MASQ
-A KUBE-SEP-2NPDRNRXOUX2T7IJ -p tcp -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -m tcp -j DNAT --to-destination 10.42.14.96:80
-A KUBE-SEP-3VCAJUEHTS7I3TRG -s 10.42.212.132/32 -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-3VCAJUEHTS7I3TRG -p tcp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53" -m tcp -j DNAT --to-destination 10.42.212.132:53
-A KUBE-SEP-6CWBZ77AME27WXPJ -s 10.42.55.132/32 -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-6CWBZ77AME27WXPJ -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -m tcp -j DNAT --to-destination 10.42.55.132:8443
-A KUBE-SEP-6WX5FXQ5YATY6NZM -s 10.42.14.97/32 -m comment --comment "r8s-test-web-services/r8s-test-web-nginx" -j KUBE-MARK-MASQ
-A KUBE-SEP-6WX5FXQ5YATY6NZM -p tcp -m comment --comment "r8s-test-web-services/r8s-test-web-nginx" -m tcp -j DNAT --to-destination 10.42.14.97:80
-A KUBE-SEP-7RTFVLLMCHN2YOMK -s 10.42.249.100/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-7RTFVLLMCHN2YOMK -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.249.100:80
-A KUBE-SEP-AVHOGN73QTR76HY3 -s 10.42.212.132/32 -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-AVHOGN73QTR76HY3 -p udp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53" -m udp -j DNAT --to-destination 10.42.212.132:53
-A KUBE-SEP-AWE6D3APBLFBYRPH -s 10.42.14.71/32 -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-AWE6D3APBLFBYRPH -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -m tcp -j DNAT --to-destination 10.42.14.71:8443
-A KUBE-SEP-BSXYUTBE2GKU7RJX -s 10.42.55.129/32 -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-BSXYUTBE2GKU7RJX -p tcp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53" -m tcp -j DNAT --to-destination 10.42.55.129:53
-A KUBE-SEP-D5W3E6WXUJEHU5Y6 -s 209.38.21.222/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
-A KUBE-SEP-D5W3E6WXUJEHU5Y6 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 209.38.21.222:5473
-A KUBE-SEP-FTTU2TIMIL4I775A -s 10.42.55.162/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-FTTU2TIMIL4I775A -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.55.162:80
-A KUBE-SEP-FU6NIKUWJSD7SQRX -s 10.42.55.153/32 -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -j KUBE-MARK-MASQ
-A KUBE-SEP-FU6NIKUWJSD7SQRX -p tcp -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -m tcp -j DNAT --to-destination 10.42.55.153:80
-A KUBE-SEP-GGE6WDXLRBNI2T7F -s 10.42.55.168/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-GGE6WDXLRBNI2T7F -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.55.168:80
-A KUBE-SEP-GOBTSNK7N6MATL7U -s 10.42.212.139/32 -m comment --comment "cattle-system/cattle-cluster-agent:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-GOBTSNK7N6MATL7U -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:http" -m tcp -j DNAT --to-destination 10.42.212.139:80
-A KUBE-SEP-IEIVYUMXLP5S6MI2 -s 10.42.249.87/32 -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -j KUBE-MARK-MASQ
-A KUBE-SEP-IEIVYUMXLP5S6MI2 -p tcp -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -m tcp -j DNAT --to-destination 10.42.249.87:80
-A KUBE-SEP-ISCJHPJGGOASRCSP -s 10.42.249.98/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-ISCJHPJGGOASRCSP -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.249.98:80
-A KUBE-SEP-IZ47JOPAMMWPCQBA -s 10.42.55.130/32 -m comment --comment "kube-system/rke2-metrics-server:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-IZ47JOPAMMWPCQBA -p tcp -m comment --comment "kube-system/rke2-metrics-server:https" -m tcp -j DNAT --to-destination 10.42.55.130:10250
-A KUBE-SEP-JH5TJSQ5NIODR4RO -s 209.38.17.11/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
-A KUBE-SEP-JH5TJSQ5NIODR4RO -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 209.38.17.11:5473
-A KUBE-SEP-KUVKK6Y2HFBI2K5Q -s 10.42.212.137/32 -m comment --comment "cattle-system/cattle-cluster-agent:https-internal" -j KUBE-MARK-MASQ
-A KUBE-SEP-KUVKK6Y2HFBI2K5Q -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:https-internal" -m tcp -j DNAT --to-destination 10.42.212.137:444
-A KUBE-SEP-L6UFBLZMPEKAYZST -s 10.42.249.99/32 -m comment --comment "r8s-test-web-services/r8s-test-web-nginx" -j KUBE-MARK-MASQ
-A KUBE-SEP-L6UFBLZMPEKAYZST -p tcp -m comment --comment "r8s-test-web-services/r8s-test-web-nginx" -m tcp -j DNAT --to-destination 10.42.249.99:80
-A KUBE-SEP-LBIWXZ7376QE5R4W -s 10.42.14.94/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-LBIWXZ7376QE5R4W -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.14.94:80
-A KUBE-SEP-LHFMCC3JA3UGQX3H -s 10.42.212.140/32 -m comment --comment "cattle-system/rancher-webhook:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-LHFMCC3JA3UGQX3H -p tcp -m comment --comment "cattle-system/rancher-webhook:https" -m tcp -j DNAT --to-destination 10.42.212.140:9443
-A KUBE-SEP-ODB7APEZBEW644YR -s 10.42.14.92/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-ODB7APEZBEW644YR -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.14.92:80
-A KUBE-SEP-OQR5UQEBCHXDPVQP -s 10.42.212.137/32 -m comment --comment "cattle-system/cattle-cluster-agent:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-OQR5UQEBCHXDPVQP -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:http" -m tcp -j DNAT --to-destination 10.42.212.137:80
-A KUBE-SEP-OVWCTFYLC7APTXJZ -s 10.42.249.68/32 -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-OVWCTFYLC7APTXJZ -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -m tcp -j DNAT --to-destination 10.42.249.68:8443
-A KUBE-SEP-PMEUI4BIJN4NHQFZ -s 10.42.249.89/32 -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -j KUBE-MARK-MASQ
-A KUBE-SEP-PMEUI4BIJN4NHQFZ -p tcp -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -m tcp -j DNAT --to-destination 10.42.249.89:80
-A KUBE-SEP-QIBCIBXODCEF4EHQ -s 10.42.14.90/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-QIBCIBXODCEF4EHQ -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.14.90:80
-A KUBE-SEP-QRGLEMPRCGNXPMPX -s 10.42.14.91/32 -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -j KUBE-MARK-MASQ
-A KUBE-SEP-QRGLEMPRCGNXPMPX -p tcp -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -m tcp -j DNAT --to-destination 10.42.14.91:80
-A KUBE-SEP-T3S2S2VDOQYZMZON -s 10.42.55.167/32 -m comment --comment "r8s-test-web-services/r8s-test-web-nginx" -j KUBE-MARK-MASQ
-A KUBE-SEP-T3S2S2VDOQYZMZON -p tcp -m comment --comment "r8s-test-web-services/r8s-test-web-nginx" -m tcp -j DNAT --to-destination 10.42.55.167:80
-A KUBE-SEP-T5EBTOPJY5NJPIBT -s 10.42.55.129/32 -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-T5EBTOPJY5NJPIBT -p udp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53" -m udp -j DNAT --to-destination 10.42.55.129:53
-A KUBE-SEP-TJMXSQ5ZZBREC6B4 -s 10.42.249.94/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-TJMXSQ5ZZBREC6B4 -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.249.94:80
-A KUBE-SEP-TKGTPA2KVQ3BNFLH -s 10.42.249.74/32 -m comment --comment "r8s-test-api-services/r8s-test-api-server" -j KUBE-MARK-MASQ
-A KUBE-SEP-TKGTPA2KVQ3BNFLH -p tcp -m comment --comment "r8s-test-api-services/r8s-test-api-server" -m tcp -j DNAT --to-destination 10.42.249.74:80
-A KUBE-SEP-Y3SVIH6FAKPDIF7Y -s 10.42.55.166/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-Y3SVIH6FAKPDIF7Y -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.55.166:80
-A KUBE-SEP-YNB5S2ZOV45SZHWS -s 10.42.212.139/32 -m comment --comment "cattle-system/cattle-cluster-agent:https-internal" -j KUBE-MARK-MASQ
-A KUBE-SEP-YNB5S2ZOV45SZHWS -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:https-internal" -m tcp -j DNAT --to-destination 10.42.212.139:444
-A KUBE-SEP-YNX7HLDUBB3ZTWVT -s 209.38.17.11/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-YNX7HLDUBB3ZTWVT -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 209.38.17.11:6443
-A KUBE-SEP-YTRVHAZXBH6CV6EN -s 10.42.14.93/32 -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -j KUBE-MARK-MASQ
-A KUBE-SEP-YTRVHAZXBH6CV6EN -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend" -m tcp -j DNAT --to-destination 10.42.14.93:80
-A KUBE-SEP-Z5KRAGMBCDB7DF24 -s 10.42.55.155/32 -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -j KUBE-MARK-MASQ
-A KUBE-SEP-Z5KRAGMBCDB7DF24 -p tcp -m comment --comment "r8s-test-app-backend/r8s-test-backend-api" -m tcp -j DNAT --to-destination 10.42.55.155:80
-A KUBE-SERVICES -d 10.43.90.205/32 -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:http cluster IP" -m tcp --dport 80 -j KUBE-SVC-RXZQBFX6IWO22WWW
-A KUBE-SERVICES -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53 cluster IP" -m udp --dport 53 -j KUBE-SVC-YFPH5LFNKP7E3G4L
-A KUBE-SERVICES -d 10.43.156.144/32 -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook cluster IP" -m tcp --dport 443 -j KUBE-SVC-46CB5Z6CZH2WFWVP
-A KUBE-SERVICES -d 10.43.250.205/32 -p tcp -m comment --comment "r8s-test-web-services/r8s-test-web-nginx cluster IP" -m tcp --dport 80 -j KUBE-SVC-WVO5D2SCRAX7PYVR
-A KUBE-SERVICES -d 10.43.122.236/32 -p tcp -m comment --comment "r8s-test-app-backend/r8s-test-backend-api cluster IP" -m tcp --dport 3000 -j KUBE-SVC-3HCIR6ANNNHMOGFQ
-A KUBE-SERVICES -d 10.43.90.205/32 -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:https-internal cluster IP" -m tcp --dport 443 -j KUBE-SVC-DISNXZXWEI7GIGLU
-A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53 cluster IP" -m tcp --dport 53 -j KUBE-SVC-PUNXDRXNIM3ELMDM
-A KUBE-SERVICES -d 10.43.77.51/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -m tcp --dport 5473 -j KUBE-SVC-RK657RLKDNVNU64O
-A KUBE-SERVICES -d 10.43.47.67/32 -p tcp -m comment --comment "cattle-system/rancher-webhook:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-BOJCKSINR77JVVPB
-A KUBE-SERVICES -d 10.43.6.109/32 -p tcp -m comment --comment "kube-system/rke2-metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-HP77IKALGGR6UULO
-A KUBE-SERVICES -d 10.43.80.37/32 -p tcp -m comment --comment "r8s-test-api-services/r8s-test-api-server cluster IP" -m tcp --dport 8080 -j KUBE-SVC-INSOL646YPXFRCJP
-A KUBE-SERVICES -d 10.43.144.65/32 -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend cluster IP" -m tcp --dport 443 -j KUBE-SVC-KTBE7ECJOHPNNRXB
-A KUBE-SERVICES -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-3HCIR6ANNNHMOGFQ ! -s 10.42.0.0/16 -d 10.43.122.236/32 -p tcp -m comment --comment "r8s-test-app-backend/r8s-test-backend-api cluster IP" -m tcp --dport 3000 -j KUBE-MARK-MASQ
-A KUBE-SVC-3HCIR6ANNNHMOGFQ -m comment --comment "r8s-test-app-backend/r8s-test-backend-api -> 10.42.14.91:80" -m statistic --mode random --probability 0.16666666651 -j KUBE-SEP-QRGLEMPRCGNXPMPX
-A KUBE-SVC-3HCIR6ANNNHMOGFQ -m comment --comment "r8s-test-app-backend/r8s-test-backend-api -> 10.42.14.96:80" -m statistic --mode random --probability 0.20000000019 -j KUBE-SEP-2NPDRNRXOUX2T7IJ
-A KUBE-SVC-3HCIR6ANNNHMOGFQ -m comment --comment "r8s-test-app-backend/r8s-test-backend-api -> 10.42.249.87:80" -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-IEIVYUMXLP5S6MI2
-A KUBE-SVC-3HCIR6ANNNHMOGFQ -m comment --comment "r8s-test-app-backend/r8s-test-backend-api -> 10.42.249.89:80" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-PMEUI4BIJN4NHQFZ
-A KUBE-SVC-3HCIR6ANNNHMOGFQ -m comment --comment "r8s-test-app-backend/r8s-test-backend-api -> 10.42.55.153:80" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-FU6NIKUWJSD7SQRX
-A KUBE-SVC-3HCIR6ANNNHMOGFQ -m comment --comment "r8s-test-app-backend/r8s-test-backend-api -> 10.42.55.155:80" -j KUBE-SEP-Z5KRAGMBCDB7DF24
-A KUBE-SVC-46CB5Z6CZH2WFWVP ! -s 10.42.0.0/16 -d 10.43.156.144/32 -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-46CB5Z6CZH2WFWVP -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook -> 10.42.14.71:8443" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-AWE6D3APBLFBYRPH
-A KUBE-SVC-46CB5Z6CZH2WFWVP -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook -> 10.42.249.68:8443" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-OVWCTFYLC7APTXJZ
-A KUBE-SVC-46CB5Z6CZH2WFWVP -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook -> 10.42.55.132:8443" -j KUBE-SEP-6CWBZ77AME27WXPJ
-A KUBE-SVC-BOJCKSINR77JVVPB ! -s 10.42.0.0/16 -d 10.43.47.67/32 -p tcp -m comment --comment "cattle-system/rancher-webhook:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-BOJCKSINR77JVVPB -m comment --comment "cattle-system/rancher-webhook:https -> 10.42.212.140:9443" -j KUBE-SEP-LHFMCC3JA3UGQX3H
-A KUBE-SVC-DISNXZXWEI7GIGLU ! -s 10.42.0.0/16 -d 10.43.90.205/32 -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:https-internal cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-DISNXZXWEI7GIGLU -m comment --comment "cattle-system/cattle-cluster-agent:https-internal -> 10.42.212.137:444" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-KUVKK6Y2HFBI2K5Q
-A KUBE-SVC-DISNXZXWEI7GIGLU -m comment --comment "cattle-system/cattle-cluster-agent:https-internal -> 10.42.212.139:444" -j KUBE-SEP-YNB5S2ZOV45SZHWS
-A KUBE-SVC-HP77IKALGGR6UULO ! -s 10.42.0.0/16 -d 10.43.6.109/32 -p tcp -m comment --comment "kube-system/rke2-metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-HP77IKALGGR6UULO -m comment --comment "kube-system/rke2-metrics-server:https -> 10.42.55.130:10250" -j KUBE-SEP-IZ47JOPAMMWPCQBA
-A KUBE-SVC-INSOL646YPXFRCJP ! -s 10.42.0.0/16 -d 10.43.80.37/32 -p tcp -m comment --comment "r8s-test-api-services/r8s-test-api-server cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
-A KUBE-SVC-INSOL646YPXFRCJP -m comment --comment "r8s-test-api-services/r8s-test-api-server -> 10.42.249.74:80" -j KUBE-SEP-TKGTPA2KVQ3BNFLH
-A KUBE-SVC-KTBE7ECJOHPNNRXB ! -s 10.42.0.0/16 -d 10.43.144.65/32 -p tcp -m comment --comment "r8s-test-app-frontend/r8s-test-frontend cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.14.90:80" -m statistic --mode random --probability 0.10000000009 -j KUBE-SEP-QIBCIBXODCEF4EHQ
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.14.92:80" -m statistic --mode random --probability 0.11111111101 -j KUBE-SEP-ODB7APEZBEW644YR
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.14.93:80" -m statistic --mode random --probability 0.12500000000 -j KUBE-SEP-YTRVHAZXBH6CV6EN
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.14.94:80" -m statistic --mode random --probability 0.14285714272 -j KUBE-SEP-LBIWXZ7376QE5R4W
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.249.100:80" -m statistic --mode random --probability 0.16666666651 -j KUBE-SEP-7RTFVLLMCHN2YOMK
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.249.94:80" -m statistic --mode random --probability 0.20000000019 -j KUBE-SEP-TJMXSQ5ZZBREC6B4
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.249.98:80" -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-ISCJHPJGGOASRCSP
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.55.162:80" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-FTTU2TIMIL4I775A
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.55.166:80" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-Y3SVIH6FAKPDIF7Y
-A KUBE-SVC-KTBE7ECJOHPNNRXB -m comment --comment "r8s-test-app-frontend/r8s-test-frontend -> 10.42.55.168:80" -j KUBE-SEP-GGE6WDXLRBNI2T7F
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.42.0.0/16 -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 209.38.17.11:6443" -j KUBE-SEP-YNX7HLDUBB3ZTWVT
-A KUBE-SVC-PUNXDRXNIM3ELMDM ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53 cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-PUNXDRXNIM3ELMDM -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53 -> 10.42.212.132:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-3VCAJUEHTS7I3TRG
-A KUBE-SVC-PUNXDRXNIM3ELMDM -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53 -> 10.42.55.129:53" -j KUBE-SEP-BSXYUTBE2GKU7RJX
-A KUBE-SVC-RK657RLKDNVNU64O ! -s 10.42.0.0/16 -d 10.43.77.51/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -m tcp --dport 5473 -j KUBE-MARK-MASQ
-A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha -> 209.38.17.11:5473" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-JH5TJSQ5NIODR4RO
-A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha -> 209.38.21.222:5473" -j KUBE-SEP-D5W3E6WXUJEHU5Y6
-A KUBE-SVC-RXZQBFX6IWO22WWW ! -s 10.42.0.0/16 -d 10.43.90.205/32 -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:http cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-RXZQBFX6IWO22WWW -m comment --comment "cattle-system/cattle-cluster-agent:http -> 10.42.212.137:80" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-OQR5UQEBCHXDPVQP
-A KUBE-SVC-RXZQBFX6IWO22WWW -m comment --comment "cattle-system/cattle-cluster-agent:http -> 10.42.212.139:80" -j KUBE-SEP-GOBTSNK7N6MATL7U
-A KUBE-SVC-WVO5D2SCRAX7PYVR ! -s 10.42.0.0/16 -d 10.43.250.205/32 -p tcp -m comment --comment "r8s-test-web-services/r8s-test-web-nginx cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-WVO5D2SCRAX7PYVR -m comment --comment "r8s-test-web-services/r8s-test-web-nginx -> 10.42.14.97:80" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-6WX5FXQ5YATY6NZM
-A KUBE-SVC-WVO5D2SCRAX7PYVR -m comment --comment "r8s-test-web-services/r8s-test-web-nginx -> 10.42.249.99:80" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-L6UFBLZMPEKAYZST
-A KUBE-SVC-WVO5D2SCRAX7PYVR -m comment --comment "r8s-test-web-services/r8s-test-web-nginx -> 10.42.55.167:80" -j KUBE-SEP-T3S2S2VDOQYZMZON
-A KUBE-SVC-YFPH5LFNKP7E3G4L ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53 cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-YFPH5LFNKP7E3G4L -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53 -> 10.42.212.132:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-AVHOGN73QTR76HY3
-A KUBE-SVC-YFPH5LFNKP7E3G4L -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53 -> 10.42.55.129:53" -j KUBE-SEP-T5EBTOPJY5NJPIBT
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-POSTROUTING -o vxlan.calico -m comment --comment "cali:e9dnSgSVNmIcpVhP" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE --random-fully
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:flqWnvo8yq4ULQLa" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE --random-fully
COMMIT
# Completed on Tue Feb  3 05:40:23 2026
